am i done: no handout

--- a/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
+++ b/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
@@ -37,6 +37,9 @@ On the assumption that social motor representation plays a role in explaining ho
 \end{abstract}
 
 \section{Slide}
+[hello]
+
+\section{Slide}
 As a philosopher I’m going to start from an empirically controversial premise.
 I don’t think this premise has been established, but I do think it’s a reasonable bet.
 
@@ -78,15 +81,16 @@ The question is whether social motor representation is not only an enabling cond
 
 
 \section{Slide}
-After this, in the last part of my talk, I also want to point to a challenge raised by the existence of social motor representation.  The challenge is roughly this: planning for joint action involves representations of target outcomes in two different formats, a motor format and a propositional format.  Given that representations of these different formats cannot straightforwardly be inferentially integrated, what could ever insure that there is sometimes non-accidental harmony between motor representations and shared intentions?
+After this, in the last part of my talk, I also want to point to a challenge raised by the existence of social motor representation.  
+The challenge is roughly this: planning for joint action involves representations of target outcomes in two different formats, a motor format and a propositional format.  
+Given that representations in these different formats cannot straightforwardly be inferentially integrated in practical reasoning, what could ever insure that there is sometimes non-accidental harmony between motor representations and shared intentions?
+
+
 
 
 
 \section{Slide}
-Let me start by explaining the premise.
-
-
-\section{Slide}
+Let me start by explaining the premise: Reciprocal agent-neutral motor representation enables joint action.
 Why think this?
 A direct way to test the premise would be to selectively intervene on social motor representation and see how it affects agents’ performance of joint actions.
 As far as I know no one has done this.
@@ -94,10 +98,11 @@ But there are some indirect findings.
 I shall mention just one, a finding by Dimitris Kourtis and colleagues.
 
 
+\section{Slide}
+They found that `the social relation between individuals modulates action simulation' \citep[p.\ 1]{kourtis:2010_favoritism}.  
 
 
 \section{Slide}
-They found that `the social relation between individuals modulates action simulation' \citep[p.\ 1]{kourtis:2010_favoritism}.  
 In slightly more detail:
 \begin{quote}
 `motor activation during action anticipation depends on the ... relation between the actor and the observer ... Simulation of another person’s action, as reﬂected in the activation of motor cortices, gets stronger the more the other is perceived as an interaction partner.’  \citep[p.\ 4]{kourtis:2010_favoritism}
@@ -187,9 +192,9 @@ The idea is that coordination is sometimes achieved by having each agent’s mot
 given some assumptions, this could be a way of making it likely that each will execute their part in the joint action in a way that meshes with the way the other agents execute their parts.
 
 Now so far I’ve only been considering a possible role for social motor representation in enabling joint action.  
-But I think we the details already give us grounds for holding that motor representation has a role to play in explaining what joint action is.
-How does this work?
-Let’s go back to individual action for a moment again.
+But I think the details already give us grounds for holding that motor representation has a role to play in explaining what joint action is.
+To see why,
+let’s go back to individual action for a moment again.
 
 
 
@@ -211,10 +216,7 @@ But there is also a second aspect ...
 
 
 \section{Slide}
-Ordinary purposive actions are sometimes composed of more than one motor action.  My swinging Isabel around starts with my reaching for her wrists, grasping them and then spinning us around ... and my action doesn’t include other things which I might be doing simultaneously, like refusing a cup of tea with my eyes orSo among all the actual and possible outcomes of my action, one or some are singled out as specially related to this action.
-One aspect of the question concerns what singles out the outcome or outcomes, actual or merely possible, to which a particular purposive is directed.
-But there is also a second aspect ...
- trying to determine whether that smell is coming from Isabel’s sister Hannah’s nappy.
+Ordinary purposive actions are sometimes composed of more than one motor action.  My swinging Isabel around starts with my reaching for her wrists, grasping them and then spinning us around ... and my action doesn’t include other things which I might be doing simultaneously, like refusing a cup of tea with my eyes or  trying to determine whether that smell is coming from Isabel’s sister Hannah’s nappy.
 
 
 
@@ -243,8 +245,8 @@ motor representations are relevantly similar to intentions.
 Of course motor representations differ from intentions in some important ways (as Pacherie also notes).
 
 But they are similar in the respects that matter for explaining the purposiveness of action.
-(1) Like intentions, some motor representations represent outcomes (and not merely patters of joint displacement, say).
-(2) Like intentions, some motor representations play a role in coordinating multiple more component activities by virtue of their role as elements in hierarchically structured plans.
+(1) Like intentions, some motor representations represent outcomes (and not merely patters of joint displacements, say).
+(2) Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
 (3) And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
 
 So in the individual case, it seems to me quite straightforward that there is a role for motor representation to play in explaining the purposiveness of action [*explaining the possibility of purposive action?].
@@ -296,15 +298,15 @@ It is in this sense that a shared intention can ground the purposiveness of a jo
 
 
 \section{Slide}
-But what we saw earlier, what the research by Kourtis et al and others indicates, is that social motor representation can play a similar role to joint action.
+But what we saw earlier, what the research by Kourtis et al and others indicates, is that social motor representation can play a  role similar to that of shared intention.
 
-Return to the example of a two agents moving an object in a way that involves passing it between them.
-the motor representation
-(1) involves a representation, on the part of each agent, of an outcome
-In this case the outcome is the whole movement of the object
-(2) coordinates the several agents’ activities
+Return to the example of two agents moving an object in a way that involves passing it between them.
+Suppose that their passing involves reciprocal agent-neutral motor representations of the outcome, which is the movement of the object. 
+These motor representations
+(1) represent an outcome to which the joint action is directed,
+(2) coordinate the several agents’ activities
 and 
-(3) coordinates the several agents’ activities in such a that would normally facilitate the occurrence of the represented outcome.
+(3) coordinate the several agents’ activities in a way that would normally facilitate the occurrence of the represented outcome.
 Because each agent represents the whole movement and plans all of its implementation irrespective of which parts she will actually perform, each agent plans the action in a way that should coordinate with the other agent’s plans providing they use similar planning procedures
 
 [*What I’m saying here, in effect, is that both shared intention and social motor representation can yield a COLLECTIVE GOAL]
@@ -338,8 +340,8 @@ Here there is clearly no \emph{direct} parallel.
 I don’t think motor representations can represent motor representations in the way that intentions can represent intentions.
 But I do think there is a parallel of sorts.
 Each agent’s having a motor representation of the distributed goal of their action does ensure meshing of subplans.
-What ensures this meshing is not the fact that each agent represents the others’ plans.
-Rather in the case where joint actions is grounded in social motor representation, what ensures meshing of subplans is two facts (i) each agent plans all of the agents’ actions, and (ii) the agents rely on similar planning strategies (planning strategies that are sufficiently similar to ensure meshing subplans).
+What ensures this meshing is not the fact that each agent represents the other's plans \emph{as the other's plans}.
+Rather in the case where joint action is grounded in social motor representation, what ensures meshing of subplans is two facts (i) each agent plans all of the agents’ actions, and (ii) the agents rely on similar planning strategies (planning strategies that are sufficiently similar to ensure meshing subplans).
 
 
 \section{Slide}
@@ -352,7 +354,7 @@ I don’t think this need arises in the case of motor representation because it 
 (In motor action, there are reasons why we do things (of course!) but these are not  reasons for which we act.)
 What motor joint action requires is not that your motor plans provide reasons for mine.
 There just has to be a good chance that this is true relative to the costs and benefits of joint action and the alternatives to joint action.
-So I think that instead of common *knowledge*, in the case of social motor representation there is a common *background* of dispositions, habits and expectations.%
+So \textbf{I think that instead of common \emph{knowledge}, in the case of social motor representation there is a common \emph{background} of dispositions, habits and expectations.}%
 \footnote{
 [***CUT but one thing that might do the work of common knowledge is a custom or habit 
 that would allow the agents, in their particular social context, to rely on each other’s cooperation.
@@ -368,16 +370,14 @@ If this is right, if social motor representations play a role analogous to the s
 
 
 \section{Slide}
-Recap: the question was: Does social motor representation also play a role in explaining what joint is?
+Recap: the question was: Does social motor representation  play a role in explaining what joint is?
 I have just been arguing for a positive answer.
 My thesis is this:
-\textbf{
-Reciprocal social motor representations coordinate multiple agents’ actions by virtue of representing an outcome to which each agent’s actions are directed.
-}
+\textbf{Reciprocal agent-neutral motor representations coordinate multiple agents’ actions around an outcome in part by virtue of representing that outcome.}
 That is, reciprocal social motor representations can ground the purposiveness of joint action.
-This is why I think that fully understanding what joint action is requires understanding the coordinating role of social motor representation and not only understand shared intention.
+This is why I think that fully understanding what joint action is requires understanding the coordinating role of social motor representation and not only understanding shared intention.
 
-I don’t mean to suggest that all joint actions involve social motor representation.  Surely some joint actions do not.  My claim is not that all joint actions involve social motor representation.  
+I don’t mean to suggest that all joint actions involve social motor representation.  Surely some joint actions do not. 
 
 But, equally, \emph{there could be purposive joint actions which do not involve shared intentions},
 just as there can be purposive actions which do not involve intentions at all.
@@ -389,33 +389,38 @@ Let me go slowly in explaining why I think there could be joint action without s
 \section{Slide}
 So what are intentions for?
 
-I’m going to assume that intention is something over and above basic beliefs and desires; that an intention is not, for instance, merely a strongest desire.
+I’m going to assume that intentions are something over and above basic beliefs and desires; that an intention is not, for instance, merely a strongest desire or, as Donald Davidson held at an early stage of his thinking, merely a belief-desire pair.
+Intention involves more than this.
 
 There is a temptation to assume that intention is involved in every case of purposive action.
-But it’s hard to see what the argument for this could be.
+But it’s hard to see what the argument for this assumption could be.
 In many cases it seems that beliefs, desires and motor representations are all that is needed to explain purposive action. 
 You offer me a biscuit.  I want one, and I believe I can get one by reaching out for it.  So I do reach for it.  As far as I can see, there’s no need to suppose that, in addition to the belief and desire, it must be the case that I also intend to take a biscuit.  
 (At least not unless we take ‘intention’ to mean ‘strongest desire’, which it does not.)  
 Maybe I do intend this.  
 But it’s possible for an agent to take and eat a biscuit, and to do so purposively, without having any intentions at all.  
-Beliefs desires and motor representations are sufficient.
+Beliefs, desires and motor representations are sufficient.
 
-So (again), what are intentions for?
-
-
-
-\section{Slide}
-Motor representations enable quite sophisticated planning over short periods of time and sequences of action; for example, how you grasp a pointer will depend on what you are about to do with it \citep{zhang:2007_planning}.
-
-This sort of planning does not need intentions at all.  So what are intentions for?
+So if we don't need intentions merely to perform a purposive action, what are intentions for?
 
 
 
 \section{Slide}
+This question becomes more pressing if you consider that motor representations enable quite sophisticated planning over short periods of time and sequences of action; for example, how you grasp a pointer will depend on what you are about to do with it \citep{zhang:2007_planning}.
+
+This sort of planning does not need intentions at all.  So (again) what are intentions for?
+
+
+
+\section{Slide}
+Michael Bratman suggests that 
 \emph{Intentions are for planning multiple separate actions over longer periods of time; and for planning multiple separate actions whose execution is mutually constraining where the outcomes cannot be represented motorically.}
 
-This is a case where intentions are really needed --- can’t act on strongest desire (for the big reward) if want to maximise rewards by collecting the small and the large reward.
-And can’t rely on motor representation because the motor system doesn’t care about things that cannot be represented in motor terms.
+This is a case where intentions are really needed [see figure in slide] --- here one can’t act on strongest desire (for the big reward) if want to maximise rewards by collecting the small and the large reward.
+And one can’t rely on motor representation because the motor system doesn’t care about things that cannot be represented in motor terms.
+
+I don't think, of course, that intentions are only involved in actions which require planning of this sort.
+But I do think it's only in such actions that absolutely require intentions.
 
 Not all purposive actions involve any planning of this sort. 
 
@@ -441,7 +446,7 @@ To focus on just one case, Alonso says ‘the key property of joint action lies 
 
 I want to spend a bit of time on this claim because it matters for my second theme, which is a problem concerning how motor representation and shared intention interface in joint action.
 
-As far as I know, this claim is not explicitly argued for.  From conversation with philosophers I think the central argument is supposed to contrast cases.
+As far as I know, this claim is not explicitly argued for.  From conversation with philosophers I think the central argument hinges on  contrast cases.
 Contrast cases are pairs of actions which are similar in terms of behaviour and coordination but where one is joint but the other isn’t....
 
 
@@ -468,10 +473,20 @@ I think the idea is supposed to be this.
 One difference between the genuinely joint actions and their merely parallel counterparts is that the genuinely joint actions involve shared intentions.
 And there is no further difference that enables one systematically to distinguish the two cases.
 
-I think this argument is mistaken.
-First because there are contrast cases in which the joint action does not involve shared intention (***bouncing a cube on a trampoline---might be done by two people merely shaking the tramoline with no interest in, or awareness of, each other).
-It follows that appeal to shared intention does not provide a sufficiently general way of explaining the difference illustrated by the contrast cases.
-Second because there is a more general notion appeal to which enables us to distinguish the contrast cases.
+I think this argument is mistaken for two reasons.
+
+
+\section{Slide}
+First because there are contrast cases in which the joint action does not involve shared intention.
+For instance, contrast our lifting a sofa together with us each individually raising either end of the sofa, coincidentally at the same time.
+The former is a joint action whereas the latter is arguably not.
+But I don't think it's right to assume that lifting a sofa together necessarily involves shared intention (although our \emph{buying} a sofa together might).
+So it seems to me that the contrast cases give us no reason at all to suppose that all joint actions involve shared intention.
+
+In fact the existence of cases like the sofa indicate that appeal to shared intention does not provide a sufficiently general way of explaining the difference illustrated by the contrast cases.
+
+This brings me to a second consideration.
+There is a more general notion appeal to which enables us to distinguish the contrast cases.
 Genuine joint action differs from merely parallel action because the former involves each agent’s representing an outcome to which all of their actions are directed where these outcome representations coordinate their actions in a way that would normally facilitate their collective success in bring about this outcome.
 
 
@@ -485,11 +500,11 @@ To sum up so far, I reject the claim that reflection on the contrast cases provi
 
 \section{Slide}
 So far I have been assuming that there is an inconsistency between two claims:
-(1) my claim that reciprocal reciprocal agent-neutral motor representation can ground purposive joint action
+(1) my claim that reciprocal  agent-neutral motor representation can ground purposive joint action
 (2) many philosophers’ claim that all joint actions involve shared intention.
 
 But maybe it is a mistake to think that these are inconsistent.
-Why not suppose that some social motor representations are a variety of shared intentions?
+Why not suppose that some social motor representations are  shared intentions?
 
 
 
@@ -502,7 +517,7 @@ This issue might easily seem narrowly conceptual or terminological.
 At the end of the day it doesn’t much matter if we want to call some motor representations ‘shared intentions’.  
 After all, on most accounts shared intentions are neither shared nor intentions so we would hardly be doing more violence to the term than is already being done.  
 So insofar as labeling some social motor representations shared intentions might help to avoid unnecessarily philosophical discussion, I’m all in favour.
-However, there is an important differences between the states normally regarded as  shared intentions and any motor representations.
+However, there is an important difference between the states normally regarded as  shared intentions and any motor representations.
 And this difference matters for understanding the interface between shared intention and motor representation.
 
 
@@ -516,15 +531,22 @@ I borrow this idea from her, but it raises a further problem.
 The problem is how the one sets outcomes for the other given the difference in representational format.
 
 
-
 \section{Slide}
-As background we first need a generic distinction between content and format. Imagine you are in an unfamiliar city and are trying to get to the central station. A stranger offers you two routes. Each route could be represented by a distinct line on a paper map. The difference between the two lines is a difference in content. Each of the routes could alternatively have been represented by a distinct series of instructions written on the same piece of paper; these cartographic and propositional representations differ in format. The format of a representation constrains its possible contents. For example, a representation with a cartographic format cannot represent what is represented by sentences such as `There could not be a mountain whose summit is inaccessible.'\footnote{ Note that the distinction between content and format is orthogonal to issues about representational medium. The maps in our illustration may be paper map or electronic maps, and the instructions may be spoken, signed or written. This difference is one of medium.} The distinction between content and format is necessary because, as our illustration shows, each can be varied independently of the other.
-
+In what respects do reciprocal agent-neutral motor representations differ from shared intentions?
 
 
 \section{Slide}
+As background we first need a generic distinction between content and format. Imagine you are in an unfamiliar city and are trying to get to the central station. A stranger offers you two routes. Each route could be represented by a distinct line on a paper map. The difference between the two lines is a difference in content. 
+
+
+\section{Slide}
+Each of the routes could alternatively have been represented by a distinct series of instructions written on the same piece of paper; these cartographic and propositional representations differ in format. 
+
 Format matters because only where two representations have the same format can they be straightforwardly inferentially integrated.
 
+
+
+\section{Slide}
 To illustrate, let’s stay with representations of routes.  
 Suppose you are given some verbal instructions describing a route. You are then shown a representation of a route on a map and asked whether this is the same route that was verbally described. You are not allowed to find out by following the routes or by imagining following them. 
 Special cases aside, answering the question will involve a process of translation because two distinct representational formats are involved, propositional and cartographic. It is not be enough that you could follow either representation of the route. You will also need to be able to translate from at least one representational format into at least one other format. 
@@ -599,7 +621,7 @@ It will take me a moment to explain what the problem is.
 \section{Slide}
 The first step is to note that:
 Some joint actions involve both shared  intention and reciprocal agent-neutral motor representation.
-Imagine two people setting up a tend in a gale together, for example.
+Imagine two people setting up a tent in a gale together, for example.
 It seems success will often require many ingredients including shared intention for the large-scale planning and reciprocal agent-neutral motor representation for passing objects and bending the poles together.
 
 
