--- a/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
+++ b/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
@@ -45,7 +45,7 @@ I don’t think this premise has been established, but I do think it’s a reaso
 
 
 \section{Slide}
-A motor representation is \emph{agent-neutral} if it concerns an action which is not one’s one or, in the case of joint action, not entirely one’s own.
+A motor representation is \emph{agent-neutral} if it concerns an action which is not one’s own or, in the case of joint action, not entirely one’s own.
 
 
 \section{Slide}
