--- a/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
+++ b/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
@@ -1,4 +1,4 @@
-%!TEX TS-program = xelatex
+ %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
 \def \papersize {a4paper}
@@ -245,7 +245,7 @@ motor representations are relevantly similar to intentions.
 Of course motor representations differ from intentions in some important ways (as Pacherie also notes).
 
 But they are similar in the respects that matter for explaining the purposiveness of action.
-(1) Like intentions, some motor representations represent outcomes (and not merely patters of joint displacements, say).
+(1) Like intentions, some motor representations represent outcomes (and not merely patterns of joint displacements, say).
 (2) Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
 (3) And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
 
